k8s-specifications/db-deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - image: postgres:15-alpine
          name: postgres

          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data

      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-pvc
