k8s-specifications/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: redis
  name: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - image: redis:alpine
          name: redis

          ports:
            - containerPort: 6379
              name: redis

          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - mountPath: /data
              name: redis-data

      volumes:
        - name: redis-data
          emptyDir: {}
