k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: result
  name: result

spec:
  replicas: 1

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
        - image: dockersamples/examplevotingapp_result
          name: result

          ports:
            - containerPort: 80
              name: result

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
