k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - image: dockersamples/examplevotingapp_vote
          name: vote

          ports:
            - containerPort: 80
              name: vote

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
